# policy_deploy

./: .gitignore  CMakeLists.txt  README.md
config/: HuOreo.yaml  WuKongIV.yaml  g1.yaml  g1_eman.yaml  g1_unitree.yaml  go2.yaml  h1.yaml  h1_2.yaml  mdl.yaml
exec/: check_G1Robot_input.cpp  check_dog_input.cpp  deploy_mujoco.cpp  deploy_raisim.cpp  deploy_real.cpp  g1.cpp  publisher.cpp  publisher_dds.cpp  robot_sim_sync.cpp  run.cpp  simulate_robot.cpp  simulate_robot_old.cpp  start_low_state.cpp  subscriber_dds.cpp  subscriber_dds_class.cpp  subscriber_visualization.cpp
include/config/: BaseRobotConfig.h  EmanRobotConfig.h  UnitreeRobotConfig.h
include/controller/: BaseController.h  BasePolicyWrapper.h  Controller.h  EmanPolicyWrapper.h  NeuralController.h  PolicyWrapper.h  ResetController.h  UnitreePolicyWrapper.h
include/core/: BaseRobotConfig.h  EmanRobotConfig.h  RobotConfig.h
include/hardware/: conio.h  joystick.h  listener.h
include/inference_engine/: BasePolicyInferenceEngine.h  PolicyInferenceEngineFactory.h
include/inference_engine/libtorch/: LibTorchInferenceEngine.h
include/inference_engine/tensorrt/: TensorRTInferenceEngine.h
include/policy_inference/: BasePolicyInferenceEngine.h  PolicyInferenceEngineFactory.h
include/policy_inference/libtorch/: LibTorchInferenceEngine.h
include/policy_inference/tensorrt/: TensorRTInferenceEngine.h
include/policy_wrapper/: BasePolicyWrapper.h  EmanPolicyWrapper.h  UnitreePolicyWrapper.h
include/real/: G1Manager.h  G1Sim2RealEnv.h
include/sim2/: base_env.h  g1_sim2mujoco_env.h  g1_sim2real_env.h
include/sim2/real/: g1_sim2real_env.h  sim2wlrobot_env.h
include/sim2/simulator/: g1_sim2mujoco_env.h
include/simulator/: MujocoManager.h  RaisimManager.h  playground.hpp
include/state_machine/: NeuralRunner.h  StateMachine.h
include/tasks/: BaseTask.h  CmdTask.h  MocapTask.h  TaskFactory.h  TeleopTask.h
include/tasks/utils/mocap/: Keypoints.h  Keypoints.idl  MocapData.h  MocapMsg.h  MocapMsg.idl  MocapMsgSubscriber.h  MocapMsgSubscriber.hpp
include/types/: CustomTypes.h  cpp_types.h  joystickTypes.h  system_defined.h
include/utility/: MathUtilities.h  cubic_interp.h  data_buffer.h  logger.h  orientation_tools.h  pd_control.h  timer.h  tools.h
include/utility/real/: unitree_tools.h
include/wlrobot_dds/hd/: IMUStateCdrAux.hpp  IMUStateCdrAux.ipp  IMUStatePubSubTypes.cxx  IMUStatePubSubTypes.hpp  IMUStateTypeObjectSupport.cxx  MotorStatesCdrAux.hpp  MotorStatesCdrAux.ipp  MotorStatesPubSubTypes.cxx  MotorStatesPubSubTypes.hpp  MotorStatesTypeObjectSupport.cxx
src/config/: EmanRobotConfig.cpp  UnitreeRobotConfig.cpp
src/controller/: BaseController.cpp  BasePolicyWrapper.cpp  EmanPolicyWrapper.cpp  NeuralController.cpp  PolicyWrapper.cpp  ResetController.cpp  UnitreePolicyWrapper.cpp
src/core/: EmanRobotConfig.cpp  RobotConfig.cpp
src/hardware/: listener.cpp
src/inference_engine/: BasePolicyInferenceEngine.cpp
src/inference_engine/libtorch/: LibTorchInferenceEngine.cpp
src/inference_engine/tensorrt/: TensorRTInferenceEngine.cpp
src/neural_policy_deploy/: CMakeLists.txt  package.xml
src/neural_policy_deploy/config/: course_config.yaml  homing_pos_HuV3.csv  homing_pos_HuV4.csv  robot_config.yaml
src/neural_policy_deploy/exec/: joint_monkey.cpp
src/neural_policy_deploy/include/ros_node/: RobotInterface.h
src/neural_policy_deploy/include/state_machine/: StateMachine.h
src/neural_policy_deploy/include/types/: CustomTypes.h  c_types.h  cpp_types.h  imu_types.h  joystickTypes.h  motor_data.h
src/neural_policy_deploy/include/utility/: MathUtilities.h  logger.h  orientation_tools.h  timer.h
src/neural_policy_deploy/src/ros_node/: RobotInterface.cpp
src/neural_policy_deploy/src/state_machine/: StateMachine.cpp
src/neural_policy_deploy/src/utility/: logger.cpp
src/policy_inference/: BasePolicyInferenceEngine.cpp
src/policy_inference/libtorch/: LibTorchInferenceEngine.cpp
src/policy_inference/tensorrt/: TensorRTInferenceEngine.cpp
src/policy_wrapper/: BasePolicyWrapper.cpp  EmanPolicyWrapper.cpp  UnitreePolicyWrapper.cpp
src/real/: G1Manager.cpp  G1Sim2RealEnv.cpp
src/robot_manager/: CMakeLists.txt  package.xml
src/robot_manager/config/: imu_config.xml  motor_config.xml
src/robot_manager/include/robot_manager/: circular_queue.hpp  imu_manager.h  ipc_communication.h  joint_dispose.h  motor_data.h  motor_low_communication.h  motor_manager.h  motor_offset.h
src/robot_manager/launch/: robot_manager_launch.py
src/robot_manager/scripts/: setup_ros2_distributed.sh
src/robot_manager/src/communication_interfaces/: ipc_communication.cpp
src/robot_manager/src/imu_manager_node/: imu_manager.cpp
src/robot_manager/src/joint_dispose_node/: joint_dispose.cpp
src/robot_manager/src/motor_manager_node/: motor_manager.cpp  motor_offset.cpp
src/robot_message/: CMakeLists.txt  package.xml
src/robot_message/msg/: ImuData.msg  JointControlGroup.msg  JointStateGroup.msg  MotorCmd.msg  MotorControl.msg  MotorState.msg  MotorStateData.msg
src/sim2/: base_env.cpp  g1_sim2mujoco_env.cpp  g1_sim2real_env.cpp
src/sim2/real/: g1_sim2real_env.cpp  sim2wlrobot_env.cpp
src/sim2/simulator/: g1_sim2mujoco_env.cpp
src/simulator/: MujocoManager.cpp  RaisimManager.cpp  playground.cpp
src/state_machine/: StateMachine.cpp
src/tasks/: BaseTask.cpp  CmdTask.cpp  MocapTask.cpp  TaskFactory.cpp  TeleopTask.cpp
src/tasks/utils/mocap/: Keypoints.c  MocapMsg.c  MocapMsgSubscriber.cpp
src/utility/: tools.cpp
src/utility/real/: unitree_tools.cpp
